--- a/src/jade/catalog.jade
+++ b/src/jade/catalog.jade
@@ -1,3 +1,18 @@
 extends _layout.jade
 block main
-	| Каталог
+	section.catalog
+		.container
+			.catalog__left-side
+				h2.h2
+					| Коллекции
+				ul.catalog__menu-list
+					li.catalog__menu-item
+						a.catalog__menu-link(href="#")
+							| Весна-Лето 2015
+					li.catalog__menu-item
+						a.catalog__menu-link.catalog__menu-link--active(href="#")
+							| Осень-Зима 2015/2016
+					li.catalog__menu-item
+						a.catalog__menu-link(href="#")
+							| Весна-Лето 2016
+			.catalog__gallery-wrap
