--- a/src/jade/product-page.jade
+++ b/src/jade/product-page.jade
@@ -1,3 +1,10 @@
 extends _layout.jade
 block main
-	| Страница товара
+	section.product
+		.container
+			.breadcrumbs
+				ul.breadcrumbs__list
+					li.breadcrumbs__item
+						a.breadcrumbs__link(href="#") Главная
+					li.breadcrumbs__item
+						a.breadcrumbs__link.breadcrumbs__link_active(href="#") Новости
