header/footer added

--- a/src/jade/_includes/_layout/_footer.jade
+++ b/src/jade/_includes/_layout/_footer.jade
@@ -1,1 +1,20 @@
-footer
+footer.footer
+	.site-details
+		.container
+			a(href='/index.html').logo-footer
+				img.logo-img(src='./img/logo-footer.png')
+			.contacts
+				.line Офис-склад оптовых продаж
+				.line Адрес: г. Ростов-на-Дону, ул. 3-я Линия , 7/51
+			.contacts
+				a.line(href='tel:+78632013751') Телефон: + 7 (863) 201-37-51/52 ,
+				a.line(href='mailto:vestopt1@mail.ru') e-mail: vestopt1@mail.ru
+			.call-back
+				a.phone(href='tel:+78632270773')
+					| +7 (863) 227-07-73
+				a.take-call(href='#')
+					| Заказать звонок
+	.site-corp
+		.container
+			.site-corp__text
+				| © Интернет-магазин Vest concept, 1998
