--- a/src/jade/_includes/_layout/_header.jade
+++ b/src/jade/_includes/_layout/_header.jade
@@ -8,8 +8,10 @@ header.header
 			a(href='/index.html').logo
 				img.logo-img(src='./img/logo.png')
 			.call-back
-				a.phone(href='tel:+78632270773') | +7 (863) 227-07-73
-				a.take-call | Заказать звонок
+				a.phone(href='tel:+78632270773')
+					| +7 (863) 227-07-73
+				a.take-call(href='#')
+					| Заказать звонок
 	.menu-line
 		.container
 			ul.main-menu
