--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -86,11 +86,11 @@
 @mixin rotate ($deg) {
   @include transform(rotate(#{$deg}deg));
 }
- 
+
 // scale
 @mixin scale($scale) {
    @include transform(scale($scale));
-} 
+}
 
 // translate
 @mixin translate ($x, $y) {
@@ -167,5 +167,13 @@
 @mixin breakpoint($width){
   @media only screen and (max-width: ($width / 16) + em) {
     @content;
-  } 
+  }
+}
+
+@mixin horiz_align_hack {
+    &:after {
+        display: inline-block;
+        content: '';
+        width: 100%;
+    }
 }
