--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -1,42 +1,108 @@
-.first-line{
-	background: url('../img/bg-header_footer.jpg') top center no-repeat;
-	padding: 9px;
-	.container {
+.carousel-wrap {
+	width: 100%;
+	margin: 0 auto;
+	position: relative;
+    visibility: hidden;
+    @include opacity(0);
+    @include transition(3s);
+    .item {
+    	position: relative;
+    	min-height: 670px;
+    	&:before{
+    		display: inline-block;
+    		content: '';
+    		width: 0;
+    		height: 660px;
+    		vertical-align: bottom;
+    	}
+    }
+    .slider-content_bg{
+    	width: 100%;
+    	height: 670px;
+    	position: absolute;
+    	top: 0;
+    	left: 0;
+    }
+    .owl-controls{
+    	margin: 0 auto;
+	    width: 1200px;
+    }
+	.owl-nav{
+		display: none;
 	}
-	.slogan{
-		text-align: center;
-		margin: 0 auto;
-		font-size: 20px;
-		line-height: 20px;
-	    font-family: 'helveticaneuecyrlight_italic';
-	    color: #751019;
+	.owl-dot{
+		@include opacity(1);
 	}
-}
-.logo-line{
-	.container {
-		@include clearfix;
-		text-align: center;
+	.owl-dot:hover{
+		@include opacity(0.8);
+		@include transition(.25s);
 	}
-	.logo {
-		display: inline-block;
-		width: 325px;
-		height: 85px;
-	}
-	.call-back{
-		float: right;
-		.phone{
 
+	.owl-dots {
+		position: absolute;
+		width: 1200px;
+		text-align: center;
+	    bottom: 5px;
+		.active {
+			background-color: #831f34;
 		}
-		.take-call{
-			@include border-radius(16px);
-			display: inline-block;
+
+	}
+	.owl-dot {
+		float:none;
+	    margin-right: 20px;
+		background-color: #fff;
+		box-shadow: inset 0px 2px 4px 0px rgba(14, 14, 14, 0.75);
+		width: 34px;
+		height: 34px;
+	    border-radius: 50%;
+	    display: inline-block;
+	}
+
+	.slider-content-wrap {
+		z-index: 1;
+		vertical-align: bottom;
+		display: inline-block;
+		width: 1200px;
+		margin: 0 auto;
+		padding: 40px 10px;
+		.slider-content{
+			vertical-align: middle;
+		}
+		.slider-title-wrap {
 			text-align: center;
-			padding: 12px;
-			background-image: -moz-linear-gradient( 90deg, rgb(202,202,202) 0%, rgb(255,255,255) 77%, rgb(213,213,213) 100%);
-			background-image: -webkit-linear-gradient( 90deg, rgb(202,202,202) 0%, rgb(255,255,255) 77%, rgb(213,213,213) 100%);
-			background-image: -ms-linear-gradient( 90deg, rgb(202,202,202) 0%, rgb(255,255,255) 77%, rgb(213,213,213) 100%);
-			box-shadow: 0px 2px 4px 0px rgba(42, 42, 42, 0.75);
-			width: 159px;
+			.slider-title{
+				@include font-size(50px);
+				font-family: 'nautilus_pompiliusregular';
+				font-size: 65px;
+				color: rgb(188, 3, 39);
+				line-height: 65px;
+				text-align: center;
+			    font-weight: normal;
+			    -webkit-text-stroke: 3px #fff;
+
+			}
+			margin-bottom: 40px;
 		}
+		.slider__content-nav{
+			.link{
+				display: inline-block;
+				padding: 13px 45px;
+				border: 2px solid #901d34;
+				font-family: 'nautilus_pompiliusregular';
+				font-size: 30px;
+				color: #bc0327;
+			}
+			margin-bottom: 40px;
+		}
+	}
+	.slider__content_desc{
+		text-align: center;
+		font-size: 28px;
+		font-family: 'helveticaneuecyrlight_italic';
+		font-weight: 400;
+		color: #2a2a2a;
+		line-height: 42px;
+		margin-bottom: 40px;
 	}
 }
