--- a/src/jade/catalog.jade
+++ b/src/jade/catalog.jade
@@ -15,4 +15,72 @@ block main
 					li.catalog__menu-item
 						a.catalog__menu-link(href="#")
 							| Весна-Лето 2016
-			.catalog__gallery-wrap
+			.catalog__right-side
+				.catalog__form-wrap
+					label.catalog__form-label
+						input.catalog__form-text(type="text" placeholder="Введите артикул " required)
+					input.catalog__form-sbt(type="submit" value="Поиск")
+				.catalog__gallery-wrap
+					.catalog__gallery-item.bigger
+						img(src="img/model-1.jpg", alt="")
+						span.gallery-item-num
+							| Арт. 239FU22
+					.obertka
+						.catalog__gallery-item.small
+							img(src="img/model-2.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+						.catalog__gallery-item.small
+							img(src="img/model-3.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+						.catalog__gallery-item.small
+							img(src="img/model-2.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+						.catalog__gallery-item.small
+							img(src="img/model-3.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+				.catalog__gallery-wrap
+					.catalog__gallery-item.bigger
+						img(src="img/model-1.jpg", alt="")
+						span.gallery-item-num
+							| Арт. 239FU22
+					.obertka
+						.catalog__gallery-item.small
+							img(src="img/model-2.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+						.catalog__gallery-item.small
+							img(src="img/model-3.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+						.catalog__gallery-item.small
+							img(src="img/model-2.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+						.catalog__gallery-item.small
+							img(src="img/model-3.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+				.catalog__gallery-wrap
+					.catalog__gallery-item.bigger
+						img(src="img/model-1.jpg", alt="")
+						span.gallery-item-num
+							| Арт. 239FU22
+					.obertka
+						.catalog__gallery-item.small
+							img(src="img/model-2.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+						.catalog__gallery-item.small
+							img(src="img/model-3.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22					
+						.catalog__gallery-item.small
+							img(src="img/model-2.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
+						.catalog__gallery-item.small
+							img(src="img/model-3.jpg", alt="")
