--- a/src/sass/layout/_catalog.scss
+++ b/src/sass/layout/_catalog.scss
@@ -3,24 +3,148 @@
 .catalog{
 	background: #f6f6f6;
 	min-height: 670px;
+	.container{
+		position: relative;
+		@include clearfix;
+	}
 	&__left-side{
+		outline: 1px solid #000;
+		float: left;
 		width: 235px;
 		color: $black;
 		background: #fff;
 		.h2{
+			padding-left: 20px;
 			font-family: 'helveticaneuecyrlight';
 			@include font-size(24px);
 			padding-top: 65px;
 			margin-bottom: 40px;
 		}
 	}
+	&__right-side{
+		position: relative;
+	}
+	&__form-wrap{
+		position: absolute;
+		z-index: 1;
+		right: 16px;
+		top: 8px;
+		.catalog__form-text{
+			float: left;
+			width: 370px;
+			padding: 7px 0 7px 45px;
+		}
+		.catalog__form-sbt{
+			width: 70px;
+			padding: 9px 0;
+		}
+		.catalog__form-text[placeholder]{
+			@include font-size(16px);
+			color: #747474;
+			font-family: 'helveticaneuecyrthin';
+		} 
+		.catalog__form-label{
+			float: left;
+			position: relative;
+			&:before{
+				content: '';
+				position: absolute;
+				background: url('../img/icons/loop.png') no-repeat;
+				width: 28px;
+				height: 23px;
+				top: 7px;
+				left: 10px;
+			}
+		}
+	}
 	&__menu{
+		&-item{
+			margin-bottom: 12px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
 		&-link{
 			font-family: 'helveticaneuecyrthin';
-			@include font-size(20px);
+			@include font-size(18px);
 			font-weight: bold;
+			padding-left: 20px;
 			&--active{
 				color: $red;
+				position: relative;
+				&:before{
+					content: '';
+					position: absolute;
+					background: url('../img/icons/arrow-active.png') no-repeat;
+					width: 13px;
+					height: 11px;
+					background-size: cover;
+					bottom: 5px;
+					left: 0;
+				}
+			}
+		}
+	}
+	&__gallery{
+		&-wrap{
+			// display: inline-block;
+			// text-align: justify;
+			display: flex;
+			flex-wrap: wrap;
+		    justify-content: space-between;
+			@include clearfix;
+			float: right;
+			width: 945px;
+			outline: 1px solid #000;
+			.bigger{
+				width: 399px;
+				height: 668px;
+				outline: 1px solid #000;
+			}
+			.small{
+				width: 259px;
+				height: 390px;
+			}
+			.obertka{
+				text-align: center;
+				outline: 1px solid red;
+				width: 532px;
+				margin-bottom: 14px;
+				.catalog__gallery-item{
+					float: left;
+					margin-right: 14px;
+					&:nth-child(1),
+					&:nth-child(2){
+						margin-bottom: 14px;
+					}
+					&:nth-child(2),
+					&:nth-child(4){
+						margin-right: 0;
+					}
+				}
+			}
+		}
+		&-item{
+			img{
+				max-width: 100%;
+				max-height: 100%;
+				width: auto;
+				height: auto;
+			}
+			position: relative;
+			height: 100%;
+			font-size: 0;
+			.gallery-item-num{
+				font-family: 'helveticaneuecyrthin';
+				@include font-size(20px);
+				position: absolute;
+				bottom: 0;
+				right: 0;
+				width: 100%;
+				height: 30px;
+				display: block;
+				text-align: right;
+				padding-right: 8px;
 			}
 		}
 	}
