--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,11 +1,11 @@
 extends _layout.jade
 block main
+	.container.search
+		.search-block
+			form.search-form
+				input(type='text' name='search_query' placeholder='Введите артикул').search-input
+				button.search-subm(name='search_subm') Поиск
 	.carousel-wrap
-		.container
-			.search-block
-				form.search-form
-					input(type='text' name='search_query' placeholder='Введите артикул').search-input
-					button.search-subm(name='search_subm') Поиск
 		div(class="carousel-main")
 			.item
 				img.slider-content_bg(src='img/slider/christmas.jpg')
