--- a/src/jade/catalog.jade
+++ b/src/jade/catalog.jade
@@ -19,66 +19,68 @@ block main
 							| Весна-Лето 2016
 			.catalog__right-side
 				.catalog__gallery-wrap
-					.catalog__gallery-item.bigger
+					a(href="product-page.html").catalog__gallery-item.bigger
 						img(src="img/model-1.jpg", alt="")
 						span.gallery-item-num
 							| Арт. 239FU22
 					.obertka
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-2.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-3.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-2.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-3.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
 				.catalog__gallery-wrap
-					.catalog__gallery-item.bigger
+					a(href="product-page.html").catalog__gallery-item.bigger
 						img(src="img/model-1.jpg", alt="")
 						span.gallery-item-num
 							| Арт. 239FU22
 					.obertka
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-2.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-3.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-2.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-3.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
 				.catalog__gallery-wrap
-					.catalog__gallery-item.bigger
+					a(href="product-page.html").catalog__gallery-item.bigger
 						img(src="img/model-1.jpg", alt="")
 						span.gallery-item-num
 							| Арт. 239FU22
 					.obertka
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-2.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-3.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22					
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-2.jpg", alt="")
 							span.gallery-item-num
 								| Арт. 239FU22
-						.catalog__gallery-item.small
+						a(href="product-page.html").catalog__gallery-item.small
 							img(src="img/model-3.jpg", alt="")
+							span.gallery-item-num
+								| Арт. 239FU22
