--- a/src/jade/product-page.jade
+++ b/src/jade/product-page.jade
@@ -15,11 +15,11 @@ block main
 					.product__gallery_img-wrapper
 						.product-status.new
 						.product__big-photo-wrap
-							.product__gallery_img
+							a(href="./img/product/img1.jpg" data-lightbox="image-1").product__gallery_img
 								img.img(src='./img/product/img1.jpg')
-							.product__gallery_img
+							a(href="./img/product/img2.jpg" data-lightbox="image-1").product__gallery_img
 								img.img(src='./img/product/img2.jpg')
-							.product__gallery_img
+							a(href="./img/product/img1.jpg" data-lightbox="image-1").product__gallery_img
 								img.img(src='./img/product/img1.jpg')
 					.product__gallery-nav-bar
 						.product__gallery_preview
